[package]
name = "gxtools"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
hyper = "0.14.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
ping = "0.5"
rust_xlsxwriter = "0.6"
chrono = "0.4"
calamine = "0.20"
async-std = "1.12"
toml = "0.7"
encoding_rs = "0.8"
local-ip-address = "0.5"
reqwest = { version = "0.11", features = ["blocking"] }
futures = "0.3.31"
