[package]
name = "gxtools"
version = "0.1.0"
edition = "2024"

# 构建脚本
build = "build.rs"

[build-dependencies]
winres = "0.1"

[dependencies]
axum = "0.6"
hyper = "0.14.32"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.5", features = ["derive"] }
ssh2 = "0.9"
rust_xlsxwriter = "0.6"
chrono = "0.4"
calamine = "0.20"
async-std = "1.12"
encoding_rs = "0.8"
local-ip-address = "0.5"
lazy_static = "1.4"
mysql_async = "0.33"
oracle = "0.6"
libloading = "0.8"
anyhow = "1.0"
reqwest = "0.12.15"
redis = { version = "0.24", features = ["aio", "tokio-comp"] }
socket2 = "0.5"
futures = "0.3"
url = "2.5"
regex = "1"
chromiumoxide = "0.6.0"
uuid = { version = "1.16.0", features = ["v4"] }
indicatif = "0.17"

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]